[package]
name = "rustcassonne"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
bevy_eventlistener = "0.2.2"
bevy_mod_picking = "0.14.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
