[package]
name = "rustcassonne"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy_eventlistener = "0.3.0"
bevy_mod_picking = "0.15.0"
bevy_mod_raycast = "0.13.1"
petgraph = "0.6.4"
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
